# pa-compact-licensing-platform

./: .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json.example  .pre-commit-config.yaml  .tool-versions  AGENTS.md  LICENSE  README.md  codecov.yml  env.example  manifest
.beads/: .beads-credential-key  config.yaml  metadata.json
.beads/hooks/: pre-commit
.claude/: settings.json
.claude/agents/: thoughts-locator.md
.claude/commands/: beads_workflow.md  cleanup.md  conduct_codereview.md  create_adr.md  create_handoff.md  create_plan.md  create_worktree.md  describe_pr.md  implement_plan.md  iterate_plan.md  local_review.md  research_codebase.md  resume_handoff.md  validate_plan.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: api.yml  client.yml  deploy-dev.yml  deploy-release.yml  lint.yml  release-build.yml
api/: .env.example  .gitignore  .spectral.yaml  CLAUDE.md  Dockerfile  README.md  conventions.md  docker-compose.yaml  justfile  openapi.yaml  pyproject.toml
api/db-migrations/: 30000101_000000_test_data.sql
api/licensing_api/: __main__.py  app.py  auth.py  config.py  dependencies.py  middleware.py  migrations.py
api/licensing_api/cache/: __init__.py
api/licensing_api/controllers/: __init__.py  health.py  response.py
api/licensing_api/db/: __init__.py  config.py  handle_error.py  lookup.py  pydantic_json_type.py  trackable_pydantic_type.py
api/licensing_api/models/: base.py
api/licensing_api/repo/: user.py
api/licensing_api/routes/: health.py  health_schemas.py  user.py
api/licensing_api/utils/: api_exceptions.py  api_exceptions_error_handler.py  api_json_validator.py  config.py  pydantic.py
api/licensing_api/utils/logging/: __init__.py  formatters.py  network.py
api/scripts/: map_sbom_to_repo.py
api/tests/: conftest.py  test_auth.py  test_errors.py  test_health.py  test_migrations.py  test_user.py
api/tests/controllers/: test_health.py  test_response.py
api/tests/db/: test_db_config.py  test_handle_error.py  test_integration.py
api/tests/load/: locustfile.py
api/tests/utils/: test_api_exceptions.py  test_api_json_validator.py  test_config.py  test_pydantic.py
client/: .env.development  .env.example  .gitignore  .npmrc  README.md  next.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
client/.storybook/: main.ts
client/src/@types/: resources.ts
client/src/app/: layout.tsx  page.tsx
client/src/components/: AddressFields.test.tsx  DateFields.test.tsx  DatePickerField.tsx  DisplayField.test.tsx  DisplayField.tsx  FilePickerField.tsx  FormStep.test.tsx  NameFields.test.tsx  SelectField.tsx  (+1 more)
docs/architecture_decision_records/: 0001-structured-json-logging.md  0002-db-config-decomposition.md  0003-users-table-schema-and-auth-design.md  0004-jwt-auth-claims-as-user-identity.md
engineering/api/: .env.example  Dockerfile  docker-compose.yaml
engineering/client/: .env.example  .gitignore  README.md  next.config.js  package.json  tsconfig.json
engineering/infrastructure/: gen-tf-plan.py
iac/: README.md
iac/bootstrap/: main.tf
infrastructure/: gen-tf-plan.py
infrastructure/iac/: README.md
thoughts/iac/: db-migrations-on-startup.md  jumpbox-dev-ingress.md
(+125 files in other folders)
