[project]
name = "pa-compact-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "coverage>=7.6.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
  "E501",  # line length handled by formatter
  "B904",  # raise-without-from in exception re-wrapping is intentional
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
