[project]
name = "pa-compact-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.42.0",
    "gunicorn>=25.3.0",
    "asyncpg>=0.31.0",
    "redis>=7.4.0",
    "pydantic-settings>=2.13.1",
    "yoyo-migrations>=9.0.0",
    "psycopg2-binary>=2.9.11",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-asyncpg>=0.62b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "coverage>=7.13.5",
    "ruff>=0.15.8",
    "pyright>=1.1.408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
  "E501",  # line length handled by formatter
  "B904",  # raise-without-from in exception re-wrapping is intentional
  "UP017", # datetime.UTC not recognized by pyright 1.1.x stubs; use timezone.utc
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
